# insta-eda

./: .env  .env.example  README.md  app.py  instaeda.db  package-lock.json  pyproject.toml
agent/: config.py  eda_agent.py  tools.py
sample_data/: sample_data.csv
ui/: account_tab.py  run_tab.py  settings_tab.py  sidebar.py  visuals.py
utils/: auth.py  report.py
