[project]
name = "insta-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pandas>=2.3.3",
    "streamlit>=1.55.0",
]
