[project]
name = "insta-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "google-generativeai>=0.8.6",
 "langchain>=1.2.12",
 "langchain-core>=1.2.19",
 "langchain-google-genai>=4.2.1",
 "numpy>=2.4.3",
 "pandas>=2.3.3",
 "streamlit>=1.55.0",
 "plotly>=6.0.0",
]
